fix z-index popup

--- a/source/stylus/theme/other.styl
+++ b/source/stylus/theme/other.styl
@@ -8,7 +8,7 @@ button#top
   padding 0.5em 0.75em
   box-sizing border-box
   transition all 0.5s
-  z-index 9999
+  z-index 9998
   cursor pointer
 
   &.is-visible
