--- a/source/stylus/theme/popup.styl
+++ b/source/stylus/theme/popup.styl
@@ -11,7 +11,7 @@
   position fixed
   top 0
   left -100%
-  z-index 2
+  z-index 9999
   transition all 0.5s
 
   &.active
